# auth

./: .env  .gitignore  Cargo.toml  db
migrations/2021-05-18-041212_create_users/: up.sql
src/: hasher.rs  main.rs
src/config/: mod.rs
src/crypto/: hasher.rs  mod.rs  token.rs
src/database/: mod.rs  models.rs  schema.rs
src/handlers/: auth.rs  mod.rs
