[package]
name = "auth"
version = "0.1.0"
authors = ["salva"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
diesel = { version = "1.4.4", features = ["sqlite"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
dotenv = "0.15.0"
